fullSandbox11072023/force-app/main/default/objects/Contract_Customer__c/Contract_Customer__c.object-meta.xml
<CustomObject>
    <label>Contract Customer</label>
    <nameField>
        <label>Contract Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>