fullSandbox11072023/force-app/main/default/objects/Contract_Customer__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>Contract_Header__c</referenceTo>
    <relationshipLabel>Contract Customers</relationshipLabel>
    <relationshipName>Contract_Customers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>