fullSandbox11072023/force-app/main/default/objects/Contract_Customer__c/fields/Agreement_Link__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Link__c</fullName>
    <formula>HYPERLINK(&quot;/apex/PP_Agreement_Detail?aid=&quot; &amp; Agreement_Number__c, Agreement_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement</label>
    <type>Text</type>
</CustomField>