fullSandbox11072023/force-app/main/default/objects/Contract_Customer__c/fields/Condition_Record__c.field-meta.xml
<CustomField>
    <fullName>Condition_Record__c</fullName>
    <label>Condition Record #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>