fullSandbox11072023/force-app/main/default/objects/Contract_Customer__c/fields/Key_Check__c.field-meta.xml
<CustomField>
    <fullName>Key_Check__c</fullName>
    <formula>IF(Key__c &lt;&gt; Key_Temp__c, &quot;ERROR&quot;, &quot;Match&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Check</label>
    <type>Text</type>
</CustomField>