fullSandbox11072023/force-app/main/default/objects/Contract_Customer__c/fields/Key_Temp__c.field-meta.xml
<CustomField>
    <fullName>Key_Temp__c</fullName>
    <formula>Agreement_Number__c &amp; SAP_Code__c &amp; 
IF(MONTH(Valid_To__c) &lt; 10, &quot;0&quot; &amp; TEXT(MONTH(Valid_To__c)), TEXT(MONTH(Valid_To__c))) &amp; &quot;/&quot; &amp;
IF(DAY(Valid_To__c) &lt; 10, &quot;0&quot; &amp; TEXT(DAY(Valid_To__c)), TEXT(DAY(Valid_To__c))) &amp; &quot;/&quot; &amp;
TEXT(YEAR(Valid_To__c)) &amp; 
IF(MONTH(Valid_From__c) &lt; 10, &quot;0&quot; &amp; TEXT(MONTH(Valid_From__c)), TEXT(MONTH(Valid_From__c))) &amp; &quot;/&quot; &amp; 
IF(DAY(Valid_From__c) &lt; 10, &quot;0&quot; &amp; TEXT(DAY(Valid_From__c)), TEXT(DAY(Valid_From__c))) &amp; &quot;/&quot; &amp;
TEXT(YEAR(Valid_From__c))
 &amp; Condition__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Temp</label>
    <type>Text</type>
</CustomField>