fullSandbox11072023/force-app/main/default/objects/Contract_Customer__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <inlineHelpText>GPO Owner Name</inlineHelpText>
    <label>Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>