fullSandbox11072023/force-app/main/default/objects/Contract_Customer__c/fields/SAP_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code_Formula__c</fullName>
    <label>SAP Code Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>