fullSandbox11072023/force-app/main/default/objects/Contract_Customer__c/validationRules/Stop_Creating_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>Stop_Creating_Records</fullName>
    <active>false</active>
    <description>This is a simple validation rule used to stop the creation of new records in the case that Jitterbit has a bad data load and cannot be stopped. - ESC 20Oct2015</description>
    <errorConditionFormula>ISNEW()</errorConditionFormula>
    <errorMessage>Temp</errorMessage>
</ValidationRule>